--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myblog
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kyungpooktalk
 
 spring.datasource.username=root
 spring.datasource.password=vvxc9874
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format.sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
