--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.format.sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 
 server.port=8081
-
+<print-error-to-browser>true</print-error-to-browser>
 spring.thymeleaf.cache=false
