회원가입 시 이메일인증기능 구현,이메일중복체크기능 구현,

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,17 @@ spring.mvc.hiddenmethod.filter.enabled=true
 server.port=8081
 <print-error-to-browser>true</print-error-to-browser>
 spring.thymeleaf.cache=false
+
+mail.smtp.auth=true
+mail.smtp.starttls.required=true
+mail.smtp.starttls.enable=true
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.socketFactory.fallback=false
+mail.smtp.port=465
+mail.smtp.socketFactory.port=465
+
+#admin ?? ??
+AdminMail.id =jeaun8061@gmail.com
+AdminMail.password =vvxc9874
+
+
