--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kyungpooktalk
 
 spring.datasource.username=root
 spring.datasource.password=vvxc9874
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.open-in-view=true
